# awesome-deep-researchers

./: .env.adr.example  .env.example  .gitignore  .mcp.json  .repomixignore  AGENTS.md  BACKGROUND.md  CLAUDE_CODE.md  CLAUDE_SKILLS.md  CONTEXT.md  COSTS.md  ENV_SETUP.md  GOAL.md  README.md  TODO.md  pyproject.toml  repomix-output.md  repomix-output.xml  setup.py  tox.ini
.agents/skills/: README.md  provider-source-index.md
.agents/skills/custom-data-deep-research/: SKILL.md
.agents/skills/deep-research-api-calls/: SKILL.md
.agents/skills/deep-research-custom-data/: SKILL.md
.agents/skills/deep-research-exa/: SKILL.md  requirements.txt
.agents/skills/deep-research-gpt-researcher/: SKILL.md
.agents/skills/deep-research-openai/: SKILL.md
.agents/skills/deep-research-perplexity/: SKILL.md
.agents/skills/deep-research-smolagents/: requirements.txt
.agents/skills/deep-research-stanford-storm/: SKILL.md
.agents/skills/deep-research-tavily/: SKILL.md
.agents/skills/deep-research-xai-grok/: SKILL.md
.agents/skills/deep-research-you/: SKILL.md
.agents/skills/exa-research/: SKILL.md
.agents/skills/gemini-deep-research/: SKILL.md
.agents/skills/gpt-researcher/: SKILL.md
.agents/skills/jina-ai/: SKILL.md
.agents/skills/langchain-deep-research/: SKILL.md  requirements.txt
.agents/skills/openai-deep-research/: SKILL.md
.agents/skills/perplexity-sonar/: SKILL.md
.agents/skills/smolagents/: SKILL.md
.agents/skills/stanford-storm/: SKILL.md
.agents/skills/tavily-search/: SKILL.md
.claude/skills/: TEST_README.md  test-requirements.txt
.claude/skills/exa-research/: SKILL.md
.claude/skills/gpt-researcher/: SKILL.md
.claude/skills/jina-ai/: SKILL.md
.claude/skills/perplexity-sonar/: SKILL.md
.claude/skills/xai-grok/: requirements.txt
.codex-plugin/: plugin.json
awesome_deep_research/: __init__.py  audit.py  cli.py  mcp_app.py  mcp_server.py  okf.py  op_env.py  providers.py  source_refresh.py
benchmark/: QUICKSTART.md  README.md  SUMMARY.md  analyze.py  benchmark.py  config.py  live_smoke.py  run_benchmark.py  scoring.py  test_system.py  tracker.py  utils.py
benchmark/results/: .gitignore  README.md
docs/: api-key-signup-checklist.md  benchmark-tasks.md  custom-data-sources.md  deep-research-agent.md  deepresearch-bench-leaderboard.md  domain-specific-deep-research.md  live-benchmark-runbook.md  okf-normalization.md  onepassword-env.md  taxonomy-and-examples.md
docs/examples/: custom-data-corpus.example.json
research/: ADDITONAL_SOURCES.md  BACKGROUND.md  BACKGROUND2.md  YOUDOTCOM_RESSEARCH.md  YOUDOTCOM_TRAINING.md
research/2026-06-23-08-30-53-i62o/: AGGREGATE_REPORT.md  deepresearch-bench-leaderboard-gpt55.csv  deepresearch-bench-leaderboard.csv  exa-research.response.txt  gemini-deep-research.response.txt  jina-ai.response.txt  perplexity-sonar.response.txt  perplexity-sonar.stderr.txt  summary.json  tavily-search.response.txt  you-research.response.txt
scripts/: run_api_fanout.py
skills/: README.md  provider-source-index.md
skills/custom-data-deep-research/scripts/: validate_manifest.py
skills/custom-data-deep-research/tests/: test_validate_manifest.py
skills/deep-research-api-calls/: SKILL.md
skills/deep-research-gemini/: SKILL.md
skills/deep-research-gemini/tests/: test_gemini_research.py
skills/deep-research-jina/: SKILL.md
skills/deep-research-jina/tests/: test_jina_tools.py
skills/deep-research-langchain/: SKILL.md
skills/deep-research-okf-normalize/: SKILL.md
skills/deep-research-smolagents/: SKILL.md
skills/exa-research/: SKILL.md
skills/gpt-researcher/: SKILL.md  requirements.txt
skills/jina-ai/: SKILL.md
skills/langchain-deep-research/: SKILL.md
skills/okf-normalize-research/: SKILL.md
skills/smolagents/: SKILL.md
skills/stanford-storm/: SKILL.md  requirements.txt
skills/tavily-search/: SKILL.md
skills/xai-grok/: SKILL.md
skills/you-research/: SKILL.md
tests/: test_api_fanout_script.py  test_audit.py  test_benchmark_cost_budget.py  test_benchmark_skill_discovery.py  test_cli.py  test_live_smoke.py  test_mcp_app.py  test_mcp_server.py  test_op_env.py  test_project_metadata.py  test_providers.py  test_source_refresh.py
(+57 files in other folders)
