[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awesome-deep-research"
version = "0.1.0"
description = "A Python library for working with deep research AI agents"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Awesome Deep Researchers Contributors"}
]
keywords = [
    "ai",
    "research",
    "deep-research",
    "agents",
    "llm",
    "chatgpt",
    "gemini",
    "perplexity",
    "citations",
    "automation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.5.0",
    "python-dateutil>=2.8.0",
    "typing-extensions>=4.8.0",
    "python-dotenv>=1.2.1",
    "tox>=4.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
]
all = [
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "anthropic>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/closedloop-technologies/awesome-deep-researchers"
Documentation = "https://github.com/closedloop-technologies/awesome-deep-researchers#readme"
Repository = "https://github.com/closedloop-technologies/awesome-deep-researchers"
Issues = "https://github.com/closedloop-technologies/awesome-deep-researchers/issues"

[project.scripts]
adr = "awesome_deep_research.cli:main"
adr-audit = "awesome_deep_research.audit:main"
adr-op-check = "awesome_deep_research.op_env:main"
adr-live-smoke = "benchmark.live_smoke:main"
adr-source-check = "awesome_deep_research.source_refresh:main"

[tool.setuptools]
packages = ["awesome_deep_research", "benchmark"]

[tool.setuptools.package-data]
awesome_deep_research = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib"
]

# ADD/UPDATE THESE CONFIGURATIONS:
testpaths = [
    "tests",           # For your main project tests (e.g., test_cli.py)
    ".claude/skills"   # For the skill tests
]
# Define the integration marker used in your tests
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["awesome_deep_research"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
